# sendable

./: Cargo.toml  LICENSE-MIT  README.md
src/: deepsize.rs  lib.rs  send_opt.rs  send_rc.rs  thread_id.rs
