[package]
name = "sendable"
version = "0.2.1"
edition = "2021"
authors = ["Hrvoje Nikšić <hniksic@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/hniksic/sendable"
homepage = "https://github.com/hniksic/sendable"
documentation = "https://docs.rs/sendable/"
keywords = ["thread", "rc", "send", "option"]
description = "Rc and Option equivalents that facilitate sending data between threads."

[dependencies]
deepsize = { version = "0.2.0", optional = true }

[features]
default = []
